--- a/mockdata-frontend/src/styles.css
+++ b/mockdata-frontend/src/styles.css
@@ -12,5 +12,5 @@ p-dialog .add input {
 }
 
 body {
-  background: url('./assets/pixel-background-grey.jpg');
+  background: url('./assets/shrimp.jpg');
 }
