added confirmation, fixed styling bug

--- a/mockdata-frontend/src/app/main/main.component.html
+++ b/mockdata-frontend/src/app/main/main.component.html
@@ -73,3 +73,8 @@
     <p-button *ngIf="!modalPayload" styleClass="better-buttons" label="Save Endpoint" (onClick)="saveEndpoint()"></p-button>
   </p-footer>
 </p-dialog>
+
+<p-confirmDialog
+  header="Confirm Delete"
+  icon="fas fa-exclamation-triangle">
+</p-confirmDialog>
