--- a/mockdata-frontend/src/app/main/main.component.scss
+++ b/mockdata-frontend/src/app/main/main.component.scss
@@ -2,36 +2,8 @@ p-dialog {
   height: 500px;
 }
 
-// .better-buttons {
-//   background-color: #324050;
-//   color: white;
-//   border-color: #F37950;
-//   :hover {
-//     background-color: #EBF4EB;
-//     color: #324050;
-//     border-radius: 3px;
-//     border-color: #F37950;
-//     border-width: 3px;
-//   }
-//   transition: background-color 0.2s, box-shadow 0.2s;
-// }
-
 :host::ng-deep {
-  body ui-button {
-    background-color: #324050;
-    color: #EBF4EB;
-    border: 1px solid #F37950;
-    :hover {
-      background-color: #EBF4EB;
-      color: #324050;
-      border-radius: 3px;
-      border-color: #F37950;
-      border-width: 3px;
-      transition: background-color 0.2s, box-shadow 0.2s;
-    }
-    transition: background-color 0.2s, box-shadow 0.2s;
-  }
-  p-button button.ui-button {
+  button.ui-button {
     background-color: #324050;
     color: #EBF4EB;
     border: none;
@@ -88,9 +60,11 @@ p-dialog {
     }
     div.ui-dialog-content.ui-widget-content {
       background-color: #F39F91;
-      height: 400px;
-      div.update.ng-star-inserted ngx-monaco-editor div.editor-container div.monaco-editor.no-user-select {
-        height: 380px !important;
+      div.update.ng-star-inserted {
+        height: 400px;
+        ngx-monaco-editor div.editor-container div.monaco-editor.no-user-select {
+          height: 400px !important;
+        }
       }
     }
     div.ui-dialog-footer.ui-widget-content {
