--- a/mockdata-frontend/src/app/main/main.component.html
+++ b/mockdata-frontend/src/app/main/main.component.html
@@ -51,7 +51,7 @@
     <b>Method:</b>&nbsp;&nbsp;&nbsp;<p-dropdown appendTo="body" [options]="methods" [(ngModel)]="method"></p-dropdown><br><br>
     <b>Path:</b>&nbsp;&nbsp;&nbsp;<span>/services/<input type="text" pInputText [(ngModel)]="path"/></span><br><br>
     <b>Creator:</b>&nbsp;&nbsp;&nbsp;<p-dropdown appendTo="body" [options]="creators" [(ngModel)]="creator"></p-dropdown><br><br>
-    <b>Used By:</b>&nbsp;&nbsp;&nbsp;<span><p-multiSelect appendTo="body" [options]="spas" [(ngModel)]="usedBy" optionLabel="blahh"></p-multiSelect></span>
+    <b>Used By:</b>&nbsp;&nbsp;&nbsp;<span><p-multiSelect appendTo="body" [options]="spas" [(ngModel)]="usedBy"></p-multiSelect></span>
   </div>
 
   <p-footer>
